--- a/css/themes.css
+++ b/css/themes.css
@@ -1,83 +1,91 @@
 :root {
-  --bg: #212121;
-  --bg-light: #303030;
-  --fg: #eceff1;
-  --acc1: #f07178;
-  --acc2: #c792ea;
+	--bg: #212121;
+	--bg-light: #303030;
+	--fg: #eceff1;
+	--acc1: #f07178;
+	--acc2: #c792ea;
 }
 
 body.material {
-  /* Empty is the default */
+	/* Empty is the default */
 }
 
 body.gruvbox-dark {
-  --bg: #1d2021;
-  --bg-light: #3c3836;
-  --fg: #bdae93;
-  --acc1: #d65d0e;
-  --acc2: #fb4934;
+	--bg: #1d2021;
+	--bg-light: #3c3836;
+	--fg: #bdae93;
+	--acc1: #d65d0e;
+	--acc2: #fb4934;
 }
 
 body.gruvbox-light {
-  --bg: #ebdbb2;
-  --bg-light: #f9f5d7;
-  --fg: #504945;
-  --acc1: #9d0006;
-  --acc2: #af3a02;
+	--bg: #ebdbb2;
+	--bg-light: #f9f5d7;
+	--fg: #504945;
+	--acc1: #9d0006;
+	--acc2: #af3a02;
 }
 
 body.nord {
-  --bg: #2e3440;
-  --bg-light: #3b4252;
-  --fg: #eceff4;
-  --acc1: #5e81ac;
-  --acc2: #8fbcbb;
+	--bg: #2e3440;
+	--bg-light: #3b4252;
+	--fg: #eceff4;
+	--acc1: #5e81ac;
+	--acc2: #8fbcbb;
 }
 
 body.dracula {
-  --bg: #282936;
-  --bg-light: #3a3c45;
-  --fg: #e9e9f4;
-  --acc1: #ea51b2;
-  --acc2: #62d6e8;
+	--bg: #282936;
+	--bg-light: #3a3c45;
+	--fg: #e9e9f4;
+	--acc1: #ea51b2;
+	--acc2: #62d6e8;
 }
 
 body.vice {
-  --bg: #1f2023;
-  --bg-light: #23262c;
-  --fg: #8b9cbe;
-  --acc1: #ff9cff;
-  --acc2: #00eaff;
+	--bg: #1f2023;
+	--bg-light: #23262c;
+	--fg: #8b9cbe;
+	--acc1: #ff9cff;
+	--acc2: #00eaff;
+}
+
+body.noob {
+	--bg: #0f1822;
+	--bg-light: #23262c;
+	--fg: #8b9cbe;
+	--acc1: #fff2f3;
+	--acc2: #ff4454;
 }
 
 body.decaf {
-  --bg: #2d2d2d;
-  --bg-light: #393939;
-  --fg: #cccccc;
-  --acc1: #ff7f7b;
-  --acc2: #efb3f7;
+	--bg: #2d2d2d;
+	--bg-light: #393939;
+	--fg: #cccccc;
+	--acc1: #ff7f7b;
+	--acc2: #efb3f7;
 }
 
 body.pastel {
-  --bg: #282828;
-  --bg-light: #393939;
-  --fg: #cdc1c1;
-  --acc1: #db7464;
-  --acc2: #a073d6;
+	--bg: #282828;
+	--bg-light: #393939;
+	--fg: #cdc1c1;
+	--acc1: #db7464;
+	--acc2: #a073d6;
 }
 
 body.solarized {
-  --bg: #002B36;
-  --bg-light: #1E3C43;
-  --fg: #93A1A1;
-  --acc1: #DC322F;
-  --acc2: #859900;
+	--bg: #002b36;
+	--bg-light: #1e3c43;
+	--fg: #93a1a1;
+	--acc1: #dc322f;
+	--acc2: #859900;
 }
 
 body.tomorrow {
-  --bg: #1D1F21;
-  --bg-light: #2D3033;
-  --fg: #C5C8C6;
-  --acc1: #B5BD68;
-  --acc2: #81A2BE;
+	--bg: #1d1f21;
+	--bg-light: #2d3033;
+	--fg: #c5c8c6;
+	--acc1: #b5bd68;
+	--acc2: #81a2be;
 }
